# NumericalMethods

./: .cproject  .gitignore  .project  .projectile  CMakeLists.txt  README.md
Approximation/: Makefile  difference.h  direct_fit.cpp  direct_fit.h  fit.cpp  fit.h  lagrange.cpp  lagrange.h  neville.h  test.cpp  xinv.cpp
Differentiation/: Makefile  direct_fit.h  xinv.cpp
Integration/: Makefile  direct_fit.hpp  newton.h  newton.hpp  xinv.cpp
Interpolation/: Makefile  direct_fit.h  direct_fit.hpp  divided_difference.h  divided_difference.hpp  enthalpy.cpp  fit.h  lagrange.h  lagrange.hpp  neville.h  neville.hpp  newton.h  newton.hpp  xinv.cpp
Nonlinear Systems/: Makefile  iterative.cpp  iterative.h  link.cpp  link_systems.cpp  newton.h  newton_systems.h
NonlinearSystems/: newton.hpp
ODEs/: BVP.hpp  IVP.h  IVP.hpp  Makefile  adams_moulton.hpp  equilibrium.hpp  explicit_euler.cpp  explicit_euler.h  explicit_euler.hpp  extrapolated_midpoint.h  extrapolated_midpoint.hpp  implicit_euler.hpp  modified_euler.h  modified_euler.hpp  modified_midpoint.h  modified_midpoint.hpp  radiation.cpp  runge_kutta.h  runge_kutta.hpp
Problems/: CMakeLists.txt
Problems/Chapter3/: p69.cpp
UnitTests/: BVP.cpp  CMakeLists.txt  Differentiation.cpp  IVP.cpp  IVPSystem.cpp  Integration.cpp  Interpolation.cpp  InterpolationSystem.cpp  NonlinearSystems.cpp  run_test.cmake
UnitTests/output/: BVP.output  Differentiation.output  IVP.output  IVPSystem.output  Integration.output  Interpolation.output  InterpolationSystem.output  NonlinearSystems.output
explicit_euler/: Makefile  explicit_euler.cpp  explicit_euler.h  problems.cpp  radiation.cpp
include/: binomial_coefficients.h  binomial_coefficients.hpp  radians.h  radians.hpp  shared_binary_node.h  shared_binary_tree.h
lib/: lib.h
root_finding/: Makefile  iterative.cpp  iterative.h  link  link.cpp  newton.cpp
