include_directories("${PROJECT_SOURCE_DIR}")

macro (add_executable _name)
  _add_executable(${ARGV})
  if(TARGET ${_name})
    target_link_libraries(${_name} ${ARMADILLO_LIBRARIES} ${ANN_LIBRARIES})
    set_target_properties(${_name} PROPERTIES RUNTIME_OUTPUT_DIRECTORY bin)
  endif()
endmacro()

add_executable(Interpolation Interpolation.cpp)
add_executable(InterpolationSystem InterpolationSystem.cpp)
add_executable(Differentiation Differentiation.cpp)
add_executable(Integration Integration.cpp)
add_executable(IVP IVP.cpp)
